--- a/.hintrc
+++ b/.hintrc
@@ -31,6 +31,7 @@
         "listitem": "off"
       }
     ],
-    "detect-css-reflows/composite": "off"
+    "detect-css-reflows/composite": "off",
+    "detect-css-reflows/paint": "off"
   }
 }
